--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
 
     <div id="app"></div>
 
-    <script src="dist/app.js"></script>
-    <script>
-        document.addEventListener(
-            'DOMContentLoaded',
-            main
-        )
-        console.log('hola');
-    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
